Duplicate Area into New window not working #37506

Closed
opened 2013-11-17 22:04:54 +01:00 by Cenek Strichel · 9 comments

System Information
Operating system and graphics card

Blender Version
r61240

Short description of error
Duplicate Area into New window not working in Full screen view.

Exact steps for others to reproduce the error

  1. View > Toggle Full Screen
  2. View > Duplicate Area into New Window
  3. New window is not created.

Maybe it is only limitation, not bug, but I dont understand why it is not possible. When it is not possible Duplicate area into new window could be hide or inactive.

**System Information** Operating system and graphics card **Blender Version** r61240 **Short description of error** Duplicate Area into New window not working in Full screen view. **Exact steps for others to reproduce the error** 1) View > Toggle Full Screen 2) View > Duplicate Area into New Window 3) New window is not created. Maybe it is only limitation, not bug, but I dont understand why it is not possible. When it is not possible Duplicate area into new window could be hide or inactive.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @Cenda

Added subscriber: @Cenda
Member

Added subscriber: @JoshuaLeung

Added subscriber: @JoshuaLeung
Member

Could not reproduce on Linux Mint 15 + Cinnamon 1.8.8

What operating system are you using? Are you sure it's not creating a new window which is just getting hidden in the background?

Could not reproduce on Linux Mint 15 + Cinnamon 1.8.8 What operating system are you using? Are you sure it's not creating a new window which is just getting hidden in the background?
Author

Sorry for incomplete information. I tried: W8.1 64b and now W7 64b. No background window is appearing.

Sorry for incomplete information. I tried: W8.1 64b and now W7 64b. No background window is appearing.

This issue was referenced by blender/blender-addons-contrib@67aff56c01

This issue was referenced by blender/blender-addons-contrib@67aff56c01337919b60c88c31416349c172c77b1

This issue was referenced by 67aff56c01

This issue was referenced by 67aff56c01337919b60c88c31416349c172c77b1

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 67aff56c01.

Closed by commit 67aff56c01.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#37506
No description provided.