Fix T37506: Duplicate Area into New, was disabled on fullscreen but works ok.